Mobile flickering bug: Sixth try

--- a/scss/mobileNav.scss
+++ b/scss/mobileNav.scss
@@ -55,16 +55,19 @@
             }
 
             h1 {
-                position: relative;
+                position: absolute;
                 z-index: 1;
-                left: 0;
+                left: 13.5vh;
+                top: 3vh;
                 margin-left: 10px;
                 font-family: 'Roboto', sans-serif;
                 color: black;
-                font-size: 18px;
+                font-size: 2.5vh;
+                // height: 2.5em;
+                margin: auto;
                 width: max-content;
 
-                transition: font-size 0.2s ease, transform 0.6s ease, left 0.8s ease;
+                transition: font-size 0.2s ease, transform 0.6s ease, left 0.8s ease, top 0.2s ease;
             }
         }
 
@@ -323,8 +326,9 @@ html:not([data-scroll='0']) {
                 }
 
                 h1 {
-                    font-size: 14px;
+                    font-size: 1.8vh;
                     // transform: translateX(-125px);
+                    top: 2vh;
                     left: max(-125px);
                 }
             }
